# cpp-sproof-client

./: CMakeLists.txt
include/: base-exception.h  config.h  json-exception.h  sproof.h
include/http/: http-client.h  http-error.h  sproof-api.h
include/model/: document.h  profile.h  raw-transaction.h  sproof-data.h
include/model/events/: document-receiver-add.h  document-receiver-revoke.h  document-register.h  document-revoke.h  profile-confirm.h  profile-register.h  profile-revoke.h  profile-update.h  sproof-event.h
src/: base-exception.cpp  config.cpp  json-exception.cpp  main.cpp  sproof.cpp
src/http/: http-client.cpp  http-error.cpp  sproof-api.cpp
src/model/: document.cpp  profile.cpp  raw-transaction.cpp
src/model/events/: document-receiver-add.cpp  document-receiver-revoke.cpp  document-register.cpp  document-revoke.cpp  profile-confirm.cpp  profile-register.cpp  profile-revoke.cpp  profile-update.cpp  sproof-event.cpp
tests/: CMakeLists.txt  test_sproof.cpp
